--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,15 @@
     transform: rotate(360deg);
   }
 }
+
+.wrapper {
+  padding-top: 50px;
+  background: #ECEFF1;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 20px;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
+}
