--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 
 .wrapper {
   padding-top: 50px;
-  background: #ECEFF1;
+  background: #f4e123;
   height: 100%;
   display: flex;
   flex-flow: row wrap;
