--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,11 +1,30 @@
-.score{
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 25%;
+@import url('https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Frijole|Mountains+of+Christmas');
+
+.navbar{
+width: 100%;
+height: 150px;
 }
 
-.high-score{
+#logo{
+    width: 175px;
     display: flex;
-    justify-content: flex-end;
-    margin-left: 30%;
+    align-items: center;
+    margin-left: 25px;
+}
+
+#tag{
+    font-family: "Frijole";
+    color: white;
+    letter-spacing: 15px;
+    font-size: 35px;
+    justify-content: center;
+    margin-left: 100px;
+}
+
+.scoreboard{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 1em;
+    color: rgba(231, 33, 43, .9);
+    font-weight: bold;
 }
