--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,27 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Frijole|Mountains+of+Christmas');
-
-.navbar{
-width: 100%;
-height: 150px;
+.navbar {
+    width: 100%;
+    height: 150px;
+    background: #f4e123;
 }
 
-#logo{
+#logo {
     width: 175px;
     display: flex;
     align-items: center;
     margin-left: 25px;
 }
 
-#tag{
-    font-family: "Frijole";
-    color: white;
-    letter-spacing: 15px;
-    font-size: 35px;
-    justify-content: center;
-    margin-left: 100px;
+@media screen and (min-width: 640px) {
+    #tag {
+        font-family: "Frijole";
+        color: white;
+        letter-spacing: 5px;
+        font-size: 30px;
+        justify-content: center;
+    }
 }
 
-.scoreboard{
+@media screen and (max-width: 768px) {
+    #tag {
+        font-family: "Frijole";
+        color: white;
+        letter-spacing: 5px;
+        font-size: 35px;
+        justify-content: center;
+        margin-left: 100px;
+    }
+}
+
+@media screen and (min-width: 980px) {
+    #tag {
+        font-family: "Frijole";
+        color: white;
+        letter-spacing: 15px;
+        font-size: 35px;
+        justify-content: center;
+        margin-left: 100px;
+    }
+}
+
+.scoreboard {
     display: flex;
     justify-content: space-around;
     padding-top: 1em;
